# fwforge

./: .gitignore  CLAUDE.md  CODE_REVIEW_2026-06-16.md  README.md  ROADMAP.md  fwforge_PaloAlto_to_FortiGate.docx  fwforge_PaloAlto_to_FortiGate.html  pyproject.toml
.claude/: settings.json
.claude/agents/: appid-researcher.md  code-reviewer.md  conversion-quality.md  parser-writer.md  pr-shepherd.md  roadmap-analyst.md  security-auditor.md  ui-stylist.md
.claude/hooks/: webui-reminder.py
assets/: gen_icon.py  make-desktop-shortcut.ps1
docs/: build_pan_fortigate_doc.js
fwforge/: __init__.py  appdb.py  cli.py  model.py  pipeline.py  platforms.py  report.py  schema.py
fwforge/data/: pan_apps.json  pan_cat_xwalk.json
fwforge/emit/: fortimanager.py  fortios.py  package.py
fwforge/parsers/: __init__.py  _vpn_common.py  cisco_asa.py  fortios_tree.py  juniper_srx.py  junos_apps.py  paloalto.py  pan_app_export.py  pan_appid.py  pan_filetype.py  (+2 more)
tests/: test_asa_parser.py  test_asa_vpn.py  test_device_system.py  test_e2e_cli.py  test_emit_fortios.py  test_error_handling.py  test_fortimanager.py  test_fortios_tree.py  test_hwswitch.py  test_ipv6.py  test_juniper_srx.py  test_limits.py  test_model.py  test_multivdom.py  test_names_and_hygiene.py  test_optimize.py  test_package.py  test_paloalto.py  test_pan_appid.py  test_pan_multivsys.py  test_pfsense.py  test_platforms.py  test_portmap_tree.py  test_routes.py  test_schema.py  test_sslvpn.py  test_tuning.py  test_vdommode.py  test_versiondelta.py  test_vpn_pan_pfsense.py  test_webui.py  test_zones_sdwan.py
(+48 files in other folders)
